--- a/sass/components/_global-classes_style.scss
+++ b/sass/components/_global-classes_style.scss
@@ -3,7 +3,18 @@
     margin-right: auto;
     padding-left: 15px;
     padding-right: 15px;
-    width: 1200px;
+    
+    @media screen and (min-width: $mobile-breakpoint) {
+        width: $mobile-breakpoint;
+    }
+
+    @media screen and (min-width: $tablet-breakpoint) {
+        width: $tablet-breakpoint;
+    }
+
+    @media screen and (min-width: $desktop-breakpoint) {
+        width: $desktop-breakpoint;
+    }
 }
 
 .section {
