--- a/sass/components/_clients-section.scss
+++ b/sass/components/_clients-section.scss
@@ -1,3 +1,7 @@
+.clients-section {
+    width: 100vw;
+}
+
 .clients-section__title {
     @extend %section-title;
 }
@@ -5,15 +9,27 @@
 .clients__list {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
+    gap: 30px;
+    
+    @media screen and (min-width: $desktop-breakpoint) {
+            & {
+                flex-wrap: nowrap;
+            }
+        }
 }
+.clients__item {
+    flex-basis: calc(100% / 2 - 30px);
 
-.clients__list .clients__item+.clients__item {
-    margin-left: 30px;
+    @media screen and (min-width: $tablet-breakpoint) {
+        & {
+            flex-basis: calc(100% / 3 - 30px);
+        }
+    }
 }
 
 .clients__link {
-    width: 170px;
-    height: 92px;
+    padding: 16px 0;
     display: flex;
     align-items: center;
     justify-content: center;
