--- a/css/main.css
+++ b/css/main.css
@@ -14,10 +14,10 @@
 }
 
 .clients-section__title, .company-team__title, .company-works__title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   font-style: normal;
-  font-size: 36px;
-  line-height: 1.1666;
+  font-size: 28px;
+  line-height: 1.1785714286;
   text-align: center;
   color: #212121;
 }
@@ -27,11 +27,13 @@ html {
 }
 
 body {
-  padding-top: 80px;
   font-family: "Roboto", sans-serif;
   font-size: 14px;
   letter-spacing: 0.03em;
   color: #212121;
+}
+body.modal-open {
+  overflow: hidden;
 }
 
 h1,
@@ -70,9 +72,17 @@ img {
   }
 }
 
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+@media screen and (max-width: 1200px) {
+  .section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .list {
@@ -82,26 +92,25 @@ img {
 }
 
 .header {
-  position: fixed;
-  top: 0;
-  left: 0;
+  position: relative;
   width: 100%;
   background-color: #FFFFFF;
   border-bottom: 1px solid #ECECEC;
-  z-index: 2;
 }
 
-.header-container {
+.header .site-nav {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  min-height: 60px;
 }
 
 .site-logo {
   font-family: "Raleway", sans-serif;
   font-style: normal;
-  font-size: 26px;
   font-weight: 700;
-  line-height: 1.1923;
+  font-size: 24px;
+  line-height: 1.1666666667;
   text-decoration: none;
   color: #000000;
 }
@@ -109,53 +118,44 @@ img {
   color: #2196F3;
 }
 
-.site-nav {
-  margin-left: 93px;
+.mobile-menu-button:hover .mobile-menu__icons {
+  fill: #2196F3;
 }
 
-.site-nav__list {
-  display: flex;
+.mobile-menu-button {
+  width: 40px;
+  height: 40px;
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  align-items: center;
+  justify-content: center;
+  background-color: #FFFFFF;
+  border: none;
+  cursor: pointer;
+}
+.mobile-menu-button .close-icon {
+  display: none;
 }
 
-.site-nav__list .site-nav__link,
-.header-contacts .header-contacts__email,
-.header-contacts .header-contacts__phone {
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-
-.site-nav__list .site-nav__item + .site-nav__item {
-  margin-left: 52px;
-}
-
-.header-contacts__list .header-contacts__item + .header-contacts__item {
-  margin-left: 50px;
-}
-
-.header-contacts__list {
-  display: flex;
-  margin-left: auto;
-}
-
-.site-nav__link {
-  position: relative;
+.mobile-menu-button.is-open .close-icon {
   display: block;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 1.1428;
-  letter-spacing: 0.02em;
-  text-decoration: none;
-  color: #212121;
-  /* css перехід */
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.site-nav__link:hover, .site-nav__link:focus {
-  color: #2196F3;
+
+.mobile-menu-button.is-open .menu-icon {
+  display: none;
 }
-.site-nav__link:hover::after, .site-nav__link:focus::after {
-  opacity: 1;
+
+.site-nav__container {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  background-color: #FFFFFF;
+}
+.site-nav__container.is-open {
+  display: block;
 }
 
 .header-contacts__email-icon {
@@ -172,103 +172,6 @@ img {
   fill: currentColor;
 }
 
-.header-contacts__email-link,
-.header-contacts__phone-link {
-  display: flex;
-  align-items: center;
-  font-weight: 500;
-  line-height: 1.1428;
-  letter-spacing: 0.02em;
-  text-decoration: none;
-  color: #757575;
-  /* css перехід */
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.header-contacts__email-link:hover, .header-contacts__email-link:focus,
-.header-contacts__phone-link:hover,
-.header-contacts__phone-link:focus {
-  color: #2196F3;
-}
-
-.current::after,
-.site-nav__link::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-  display: block;
-  min-width: 100%;
-  height: 4px;
-  background-color: #2196F3;
-  opacity: 0;
-  border-radius: 2px;
-  /* css перехід */
-  transition-property: opacity;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.site-nav__link--current, .site-nav__link--current::after {
-  opacity: 1;
-  color: #2196F3;
-}
-
-.hero-section {
-  max-width: 1600px;
-  min-height: 600px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-top: 200px;
-  padding-bottom: 200px;
-  text-align: center;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero_image.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  background-color: #212121;
-}
-
-.hero-section__title {
-  display: block;
-  width: 696px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 30px;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.3636;
-  text-align: center;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  color: #FFFFFF;
-}
-
-.hero-section__button {
-  background: #2196F3;
-  padding: 10px 32px;
-  font-family: "Roboto", sans-serif;
-  font-style: normal;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 1.875;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.06em;
-  cursor: pointer;
-  color: #FFFFFF;
-  border: none;
-  border-radius: 4px;
-  /* css перехід */
-  transition-property: background-color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.hero-section__button:active {
-  background-color: #188CE8;
-}
-
 .modal-window-backdrop {
   position: fixed;
   /* Ставимо його в початок вюпорта */
@@ -277,12 +180,14 @@ img {
   /* і розтягуємо на вюпорт */
   width: 100%;
   height: 100%;
+  padding: 94px 15px;
   background-color: rgba(0, 0, 0, 0.2);
   /* css перехід */
   transition-property: opacity;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   z-index: 3;
+  overflow-y: scroll;
 }
 
 .modal-window-backdrop.is-hidden {
@@ -297,19 +202,29 @@ img {
 }
 
 .modal-window {
-  /* центрування відносно початку вікна верхній лівий кут */
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  /* padding: 8px; */
-  transform: translate(-50%, -50%) scale(1);
-  min-width: 528px;
-  min-height: 581px;
   border-radius: 4px;
   background-color: #FFFFFF;
   transition-property: transform;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 480px) {
+  .modal-window {
+    /* центрування відносно початку вікна верхній лівий кут */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    padding: 40px;
+    transform: translate(-50%, -50%) scale(1);
+    max-width: 450px;
+    width: 100%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal-window {
+    max-width: 528px;
+    width: 100%;
+  }
 }
 
 .modal-window__close-icon {
@@ -325,13 +240,13 @@ img {
 }
 
 .modal-window__close-button {
+  position: absolute;
+  top: 8px;
+  right: 8px;
   width: 30px;
   height: 30px;
   display: flex;
   align-items: center;
-  margin-top: 8px;
-  margin-right: 8px;
-  margin-left: auto;
   background-color: #FFFFFF;
   cursor: pointer;
   border: 1px solid rgba(0, 0, 0, 0.1);
@@ -339,19 +254,18 @@ img {
 }
 
 .modal-window__title {
-  width: 448px;
+  min-width: 370px;
   display: block;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 12px;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   text-align: center;
   color: #212121;
 }
 
 .modal-window-form {
-  width: 448px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -449,9 +363,15 @@ img {
   align-items: center;
   justify-content: center;
   margin-bottom: 30px;
-  font-size: 14px;
-  line-height: 1.7142857143;
+  font-size: 12px;
+  line-height: 1.1666666667;
   color: #757575;
+}
+@media screen and (min-width: 1200px) {
+  .modal-window-form__check {
+    font-size: 14px;
+    line-height: 1.7142857143;
+  }
 }
 
 .modal-window-form__check-icon {
@@ -485,7 +405,6 @@ img {
   line-height: 1.875;
   margin-right: auto;
   margin-left: auto;
-  margin-bottom: 40px;
   display: flex;
   align-items: center;
   text-align: center;
@@ -497,16 +416,44 @@ img {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
-.features__list {
-  display: flex;
+@media screen and (min-width: 768px) {
+  .features__list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .features__list {
+    flex-wrap: nowrap;
+  }
 }
 
-.features__list .features__item + .features__item {
-  margin-left: 30px;
+@media screen and (min-width: 1200px) {
+  .features__list .features__item + .features__item {
+    margin-left: 30px;
+  }
 }
 
-.features__item {
-  flex-basis: 25%;
+@media screen and (max-width: 480px) {
+  .features__item {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .features__item {
+    flex-basis: calc((100% - 30px) / 2);
+  }
+  .features__item:first-child {
+    margin-bottom: 30px;
+  }
+  .features__item:nth-child(2n) {
+    margin-left: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .features__item {
+    flex-basis: calc((100% - 30px) / 4);
+  }
 }
 
 .features__icon {
@@ -525,22 +472,33 @@ img {
 }
 
 .features__name {
+  text-align: center;
   margin-bottom: 10px;
   font-style: normal;
   font-size: 14px;
   line-height: 1.1428;
   text-transform: uppercase;
 }
+@media (min-width: 768px) {
+  .features__name {
+    text-align: left;
+  }
+}
 
 .features__description {
   font-style: normal;
   font-weight: 400;
   line-height: 1.7142;
-  color: #757575;
+  color: blck;
 }
 
 .company-works {
   padding-top: 0;
+}
+@media screen and (max-width: 1200px) {
+  .company-works {
+    display: none;
+  }
 }
 
 .company-works-list {
@@ -578,19 +536,32 @@ img {
   background-color: #F5F4FA;
 }
 
-.company-team__list {
-  display: flex;
+@media screen and (min-width: 768px) {
+  .company-team__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 30px;
+  }
 }
-
-.company-team__list .company-team__item + .company-team__item {
-  margin-left: 30px;
+@media screen and (min-width: 1200px) {
+  .company-team__list {
+    flex-wrap: nowrap;
+  }
 }
 
 .company-team__item {
+  margin-bottom: 30px;
   background-color: #FFFFFF;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
+}
+@media screen and (min-width: 768px) {
+  .company-team__item {
+    margin-bottom: 0;
+    flex-basis: calc(50% - 30px);
+  }
 }
 
 .employee-description {
@@ -650,18 +621,33 @@ img {
   fill: currentColor;
 }
 
+.clients-section {
+  width: 100vw;
+}
+
 .clients__list {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+@media screen and (min-width: 1200px) {
+  .clients__list {
+    flex-wrap: nowrap;
+  }
 }
 
-.clients__list .clients__item + .clients__item {
-  margin-left: 30px;
+.clients__item {
+  flex-basis: calc(50% - 30px);
+}
+@media screen and (min-width: 768px) {
+  .clients__item {
+    flex-basis: calc(33.3333333333% - 30px);
+  }
 }
 
 .clients__link {
-  width: 170px;
-  height: 92px;
+  padding: 16px 0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -688,15 +674,20 @@ img {
 
 .projects-filter__list {
   display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
+  flex-wrap: wrap;
+  -moz-column-gap: 8px;
+       column-gap: 8px;
+  row-gap: 15px;
+  margin-bottom: 40px;
 }
-
-.projects-filter__list .projects-filter__item + .projects-filter__item {
-  margin-left: 8px;
+@media screen and (min-width: 768px) {
+  .projects-filter__list {
+    justify-content: center;
+  }
 }
 
 .projects-filter__button {
+  flex-basis: calc(33.3333333333% - 8px);
   background: #F5F4FA;
   padding: 6px 22px;
   font-family: "Roboto", sans-serif;
@@ -724,14 +715,22 @@ img {
 .projects__list {
   display: flex;
   flex-wrap: wrap;
-  margin-top: -30px;
-  margin-left: -30px;
+  gap: 30px;
+  justify-content: space-between;
 }
 
 .projects__item {
-  margin-top: 30px;
-  margin-left: 30px;
-  flex-basis: calc(33.3333333333% - 30px);
+  flex-basis: 100%;
+}
+@media screen and (min-width: 768px) {
+  .projects__item {
+    flex-basis: calc(50% - 30px);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .projects__item {
+    flex-basis: calc(33.3333333333% - 30px);
+  }
 }
 
 .projects__link {
@@ -833,21 +832,43 @@ img {
   background-color: #2F303A;
 }
 
-.footer-container {
-  display: flex;
-  align-items: baseline;
-  align-content: center;
-  justify-content: space-between;
+@media screen and (min-width: 1200px) {
+  .footer-container {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer-contacts-social-container {
+    display: flex;
+    justify-content: space-around;
+  }
 }
 
 .footer__site-logo {
   display: block;
-  margin-bottom: 20px;
+  margin-bottom: 28px;
+  text-align: center;
   color: #FFFFFF;
 }
+@media screen and (min-width: 1200px) {
+  .footer__site-logo {
+    text-align: left;
+  }
+}
 
+.footer-contacts__list {
+  margin-bottom: 60px;
+  text-align: center;
+}
 .footer-contacts__list li:not(:last-child) {
-  margin-bottom: 9px;
+  margin-bottom: 12px;
+}
+@media screen and (min-width: 1200px) {
+  .footer-contacts__list {
+    text-align: left;
+  }
 }
 
 .footer-contacts__physical-address {
@@ -855,13 +876,13 @@ img {
   margin-bottom: 9px;
   font-style: normal;
   font-size: 14px;
-  line-height: 1.7142;
+  line-height: 1.1428571429;
   color: #FFFFFF;
 }
 
 .footer-contacts__link {
   font-style: normal;
-  line-height: 1.7142;
+  line-height: 1.1428571429;
   text-decoration: none;
   color: rgba(255, 255, 255, 0.6);
   /* css перехід */
@@ -880,11 +901,22 @@ img {
   font-size: 14px;
   line-height: 1.1428571429;
   text-transform: uppercase;
+  text-align: center;
   color: #FFFFFF;
+}
+@media screen and (min-width: 1200px) {
+  .footer-social-container_name {
+    text-align: left;
+  }
 }
 
 .footer-social-container {
-  margin-left: 70px;
+  margin-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .footer-social-container {
+    margin-left: 70px;
+  }
 }
 
 .footer-social__list {
@@ -920,28 +952,35 @@ img {
   background-color: #2196F3;
 }
 
-.footer-subscribe {
-  margin-left: auto;
-}
-
 .footer-subscribe__name {
-  display: inline-block;
   margin-bottom: 20px;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.1428571429;
   text-transform: uppercase;
+  text-align: center;
   color: #FFFFFF;
+}
+@media screen and (min-width: 1200px) {
+  .footer-subscribe__name {
+    text-align: left;
+  }
 }
 
 .footer-subscribe-form {
-  display: flex;
-  align-items: baseline;
+  text-align: center;
+}
+@media screen and (min-width: 1200px) {
+  .footer-subscribe-form {
+    display: flex;
+    align-items: baseline;
+  }
 }
 
 .footer-subscribe-form__input {
-  width: 358px;
+  width: 100%;
   height: 50px;
+  margin-bottom: 20px;
   padding: 15px 16px;
   color: #FFFFFF;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -956,6 +995,17 @@ img {
   outline: none;
   border-color: #FFFFFF;
 }
+@media screen and (min-width: 768px) {
+  .footer-subscribe-form__input {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-subscribe-form__input {
+    width: 358px;
+    margin-right: 12px;
+  }
+}
 
 .footer-subscribe-form__button {
   font-family: "Roboto";
@@ -964,8 +1014,9 @@ img {
   font-size: 16px;
   line-height: 1.875;
   width: 200px;
+  margin-left: auto;
+  margin-right: auto;
   padding: 10px 28px;
-  margin-left: 12px;
   display: flex;
   align-items: center;
   text-align: center;
@@ -983,92 +1034,4 @@ img {
   height: 24px;
   margin-left: 10px;
   fill: currentColor;
-}
-
-.mobile-menu__container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 480px;
-  height: 796px;
-  padding-left: 40px;
-  padding-right: 15px;
-  padding-top: 10px;
-  padding-bottom: 48px;
-  z-index: 10;
-  background-color: white;
-  outline: 5px solid blue;
-}
-
-.mobile-menu__close-icon {
-  width: 18px;
-  height: 18px;
-}
-
-.mobile-menu__close-button {
-  width: 40px;
-  height: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-left: auto;
-  background-color: #FFFFFF;
-  cursor: pointer;
-}
-
-.mobile-menu__nav-link {
-  font-weight: 500;
-  font-size: 40px;
-  line-height: 1.175;
-  letter-spacing: 0.02em;
-  color: #212121;
-  text-decoration: none;
-}
-.mobile-menu__nav-link:hover {
-  color: #2196F3;
-}
-
-.mobile-menu__phone-link {
-  font-weight: 500;
-  font-size: 34px;
-  line-height: 40px;
-  letter-spacing: 0.02em;
-  color: #2196F3;
-  text-decoration: none;
-}
-
-.mobile-menu__email-link {
-  font-weight: 500;
-  font-size: 24px;
-  line-height: 1.1666666667;
-  letter-spacing: 0.02em;
-  color: #757575;
-  text-decoration: none;
-}
-
-.mobile-menu__social-list {
-  display: flex;
-}
-
-.mobile-menu__social-item {
-  display: flex;
-  align-items: center;
-  align-content: center;
-}
-.mobile-menu__social-item:not(:first-child)::before {
-  content: "";
-  display: block;
-  width: 22px;
-  height: 1px;
-  background-color: rgba(33, 33, 33, 0.2);
-  transform: rotate(90deg);
-}
-
-.mobile-menu__social-link {
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 1.2222222222;
-  letter-spacing: 0.02em;
-  color: #2196F3;
-  text-decoration: none;
 }/*# sourceMappingURL=main.css.map */
