--- a/sass/components/_company-team-section.scss
+++ b/sass/components/_company-team-section.scss
@@ -1,23 +1,41 @@
-.company-team__title {
-    @extend %section-title;
-}
-
 .company-team {
     background-color: $global-lightgray-color;
 }
 
-.company-team__list {
-    display: flex;
+.company-team__title {
+    @extend %section-title;
 }
 
-.company-team__list .company-team__item+.company-team__item {
-    margin-left: 30px;
+.company-team__list {
+    @media screen and (min-width: $tablet-breakpoint) {
+            & {
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: space-between;
+                gap: 30px;
+            }
+        }
+    
+    @media screen and (min-width: $desktop-breakpoint) {
+        & {
+            flex-wrap: nowrap;
+        }
+    }
 }
 
 .company-team__item {
+    margin-bottom: 30px;
+    @media screen and (min-width: $tablet-breakpoint) {
+        & {
+            margin-bottom: 0;
+            flex-basis: calc(100% / 2 - 30px);
+        }
+    }
+
     background-color: $global-white-color;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-        0px 2px 1px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 
+                0px 1px 1px rgba(0, 0, 0, 0.14),
+                0px 2px 1px rgba(0, 0, 0, 0.2);
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
 }
