--- a/sass/components/_global-classes_style.scss
+++ b/sass/components/_global-classes_style.scss
@@ -5,21 +5,38 @@
     padding-right: 15px;
     
     @media screen and (min-width: $mobile-breakpoint) {
-        width: $mobile-breakpoint;
+        & {
+            width: $mobile-breakpoint;
+        }
     }
 
     @media screen and (min-width: $tablet-breakpoint) {
-        width: $tablet-breakpoint;
+        & {
+            width: $tablet-breakpoint;
+        }
     }
 
     @media screen and (min-width: $desktop-breakpoint) {
-        width: $desktop-breakpoint;
+        & {
+            width: $desktop-breakpoint;
+        }
     }
 }
 
 .section {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    @media screen and (max-width: $desktop-breakpoint) {
+        & {
+            padding-top: 60px;
+            padding-bottom: 60px;
+        }
+    }
+
+    @media screen and (min-width: $desktop-breakpoint) {
+        & {
+            padding-top: 94px;
+            padding-bottom: 94px;
+        }
+    }
 }
 
 .list {
