--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,100 +1,112 @@
-.mobile-menu__container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    // width: 100vw;
-    width: 480px;
-    height: 796px;
-    padding-left: 40px;
-    padding-right: 15px;
-    padding-top: 10px;
-    padding-bottom: 48px;
-    z-index: 10;
-    background-color: white;
-    outline: 5px solid blue;
-}
+// .mobile-menu__container {
+//     display: none;
+//     position: fixed;
+//     top: 0;
+//     left: 0;
+//     // width: 100vw;
+//     width: 100vw;
+//     height: 100vh;
+//     padding-left: 40px;
+//     padding-right: 15px;
+//     padding-top: 10px;
+//     padding-bottom: 48px;
+//     z-index: 10;
+//     background-color: $global-white-color;
+//     transform: translateX(100%);
+//     transition-property: transform;
+//     transition-duration: 250ms;
+//     transition-timing-function: ease-in-out;
 
-.js-menu-container {}
+//     &.is_open {
+//         transform: translateX(0%);
+//     }
+// }
 
-.mobile-menu__close-icon {
-    width: 18px;
-    height: 18px;
-}
+// .mobile-menu__close-icon {
+//     .mobile-menu__close-button:hover & {
+//         fill: $global-sky-color;
+//     }
+// }
 
-.mobile-menu__close-button {
-    width: 40px;
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-left: auto;
-    background-color: $global-white-color;
-    cursor: pointer;
-}
+// .mobile-menu__close-button {
+//     width: 40px;
+//     height: 40px;
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     margin-left: auto;
+//     background-color: $global-white-color;
+//     border: none;
+//     cursor: pointer;
+// }
 
-.js-close-menu {}
+// .mobile-menu__nav-list {
+//     margin-bottom: 64px;
+// }
 
+// .mobile-menu__nav-item {
+//     margin-bottom: 32px;
 
+//     &:nth-child(3n) {
+//         margin-bottom: 306px;
+//     }
+// }
 
-.mobile-menu__nav-list {}
-
-.mobile-menu__nav-item {}
-
-.mobile-menu__nav-link {
-    font-weight: 500;
-    font-size: 40px;
-    line-height: calc(47 / 40);
-    letter-spacing: 0.02em;
-    color: $global-blackgray-color;
-    text-decoration: none;
+// .mobile-menu__nav-link {
+//     font-weight: 500;
+//     font-size: 40px;
+//     line-height: calc(47 / 40);
+//     letter-spacing: 0.02em;
+//     color: $global-blackgray-color;
+//     text-decoration: none;
     
-    &:hover {
-        color: $global-sky-color;
-    }
-}
+//     &:hover {
+//         color: $global-sky-color;
+//     }
+// }
 
-.mobile-menu__phone-link {
-    font-weight: 500;
-    font-size: 34px;
-    line-height: 40px;    
-    letter-spacing: 0.02em;
-    color: #2196F3;
-    text-decoration: none;
-}
+// .mobile-menu__phone-link {
+//     font-weight: 500;
+//     font-size: 34px;
+//     line-height: 40px;    
+//     letter-spacing: 0.02em;
+//     color: #2196F3;
+//     text-decoration: none;
+// }
 
-.mobile-menu__email-link {
-    font-weight: 500;
-    font-size: 24px;
-    line-height: calc(28 / 24);
-    letter-spacing: 0.02em;
-    color: $global-lightblack-color;
-    text-decoration: none;
-}
+// .mobile-menu__email-link {
+//     font-weight: 500;
+//     font-size: 24px;
+//     line-height: calc(28 / 24);
+//     letter-spacing: 0.02em;
+//     color: $global-lightblack-color;
+//     text-decoration: none;
+// }
 
-.mobile-menu__social-list {
-    display: flex;
-}
+// .mobile-menu__social-list {
+//     display: flex;
+// }
 
-.mobile-menu__social-item {
-    display: flex;
-    align-items: center;
-    align-content: center;
+// .mobile-menu__social-item {
+//     display: flex;
+//     align-items: center;
+//     align-content: center;
 
-    &:not(:first-child)::before {
-        content: "";
-        display: block;
-        width: 22px;
-        height: 1px;
-        background-color: $form-border-color;
-        transform: rotate(90deg);
-    }
-}
+//     &:not(:first-child)::before {
+//         content: "";
+//         display: block;
+//         width: 22px;
+//         height: 1px;
+//         background-color: $form-border-color;
+//         transform: rotate(90deg);
+//     }
+// }
 
-.mobile-menu__social-link {
-    font-weight: 500;
-    font-size: 18px;
-    line-height: calc(22 / 18);
-    letter-spacing: 0.02em;
-    color: $global-sky-color;
-    text-decoration: none;
-}
+// .mobile-menu__social-link {
+//     font-weight: 500;
+//     font-size: 18px;
+//     line-height: calc(22 / 18);
+//     letter-spacing: 0.02em;
+//     color: $global-sky-color;
+//     text-decoration: none;
+// }
