--- a/sass/components/_site-footer.scss
+++ b/sass/components/_site-footer.scss
@@ -5,21 +5,47 @@
 }
 
 .footer-container {
-    display: flex;
-    align-items: baseline;
-    align-content: center;
-    justify-content: space-between;
+    @media screen and (min-width: $desktop-breakpoint) {
+        & {
+            display: flex;
+            justify-content: space-between;
+        }
+    }
+}
+
+.footer-contacts-social-container {
+    @media screen and (min-width: $tablet-breakpoint) {
+        & {
+            display: flex;
+            justify-content: space-around;
+        }
+    }
 }
 
 .footer__site-logo {
     display: block;
-    margin-bottom: 20px;
+    margin-bottom: 28px;
+    text-align: center;
     color: $global-white-color;
+
+    @media screen and (min-width: $desktop-breakpoint) {
+        & {
+            text-align: left;
+        }
+    }
 }
 
 .footer-contacts__list {
+    margin-bottom: 60px;
+    text-align: center;
     li:not(:last-child) {
-        margin-bottom: 9px;
+        margin-bottom: 12px;
+    }
+
+    @media screen and (min-width: $desktop-breakpoint) {
+        & {
+            text-align: left;
+        }
     }
 }
 
@@ -28,13 +54,13 @@
     margin-bottom: 9px;
     font-style: normal;
     font-size: 14px;
-    line-height: 1.7142;
+    line-height: calc(16 / 14);
     color: $global-white-color;
 }
 
 .footer-contacts__link {
     font-style: normal;
-    line-height: 1.7142;
+    line-height: calc(16 / 14);
     text-decoration: none;
     color: $footer-contacts-color;
     /* css перехід */
@@ -55,11 +81,23 @@
     font-size: 14px;
     line-height: calc(16 / 14);
     text-transform: uppercase;
+    text-align: center;
     color: $global-white-color;
+    
+    @media screen and (min-width: $desktop-breakpoint) {
+        & {
+            text-align: left;
+        }
+    }
 }
 
 .footer-social-container {
-    margin-left: 70px;
+    margin-bottom: 60px;
+    @media screen and (min-width: $desktop-breakpoint) {
+        & {
+            margin-left: 70px;
+        }
+    }
 }
 
 .footer-social__list {
@@ -97,28 +135,36 @@
     }
 }
 
-.footer-subscribe {
-    margin-left: auto;
-}
-
 .footer-subscribe__name {
-    display: inline-block;
     margin-bottom: 20px;
     font-weight: 700;
     font-size: 14px;
     line-height: calc(16 / 14);
     text-transform: uppercase;
+    text-align: center;
     color: $global-white-color;
+    
+    @media screen and (min-width: $desktop-breakpoint) {
+        & {
+            text-align: left;
+        }
+    }
 }
 
 .footer-subscribe-form {
-    display: flex;
-    align-items: baseline;
+    text-align: center;
+    @media screen and (min-width: $desktop-breakpoint) {
+        & {
+            display: flex;
+            align-items: baseline;
+        }
+    }
 }
 
 .footer-subscribe-form__input {
-    width: 358px;
+    width: 100%;
     height: 50px;
+    margin-bottom: 20px;
     padding: 15px 16px;
     color: $global-white-color;
     border: 1px solid rgba(255, 255, 255, 0.3);
@@ -133,6 +179,18 @@
         outline: none;
         border-color: $global-white-color;
     }
+
+    @media screen and (min-width: $tablet-breakpoint) {
+        & {
+           width: 450px;
+        }
+    }
+    @media screen and (min-width: $desktop-breakpoint) {
+        & {
+            width: 358px;
+            margin-right: 12px;
+        }
+    }
 }
 
 .footer-subscribe-form__button {
@@ -142,8 +200,9 @@
     font-size: 16px;
     line-height: calc(30 / 16);
     width: 200px;
+    margin-left: auto;
+    margin-right: auto;
     padding: 10px 28px;
-    margin-left: 12px;
     display: flex;
     align-items: center;
     text-align: center;
