--- a/sass/utils/_placeholders.scss
+++ b/sass/utils/_placeholders.scss
@@ -12,10 +12,10 @@
 }
 
 %section-title {
-    margin-bottom: 50px;
+    margin-bottom: 30px;
     font-style: normal;
-    font-size: 36px;
-    line-height: 1.1666;
+    font-size: 28px;
+    line-height: calc(33 / 28);
     text-align: center;
     color: $global-blackgray-color;
 }
