--- a/sass/components/_hero-section.scss
+++ b/sass/components/_hero-section.scss
@@ -1,57 +1,112 @@
-// .hero-section {
-//     max-width: 1600px;
-//     min-height: 600px;
-//     margin-left: auto;
-//     margin-right: auto;
-//     padding-top: 200px;
-//     padding-bottom: 200px;
-//     text-align: center;
-//     background-image: linear-gradient(to right,
-//             rgba(47, 48, 58, 0.4),
-//             rgba(47, 48, 58, 0.4)),
-//         url(../images/hero_image.jpg);
-//     background-repeat: no-repeat;
-//     background-position: center;
-//     background-size: cover;
-//     background-color: $global-blackgray-color;
-// }
+.hero-section {
+    max-width: 480px;
+    min-height: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 118px;
+    padding-bottom: 118px;
+    text-align: center;
+    background-image: linear-gradient(to right,
+            rgba(47, 48, 58, 0.4),
+            rgba(47, 48, 58, 0.4)),
+        url(../images/hero_mobile.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    background-color: $global-blackgray-color;
 
-// .hero-section__title {
-//     display: block;
-//     width: 696px;
-//     margin-left: auto;
-//     margin-right: auto;
-//     margin-bottom: 30px;
-//     font-weight: 900;
-//     font-size: 44px;
-//     line-height: 1.3636;
-//     text-align: center;
-//     letter-spacing: 0.06em;
-//     text-transform: uppercase;
-//     color: $global-white-color;
-// }
+    @media screen and (min-resolution: 2dppx) {
+        & {
+            background-image: linear-gradient(to right,
+                            rgba(47, 48, 58, 0.4),
+                            rgba(47, 48, 58, 0.4)),
+                              url(../images/hero_mobile@2x.jpg);
+        }
+    }
 
-// .hero-section__button {
-//     background: $global-sky-color;
-//     padding: 10px 32px;
-//     font-family: $body-font-family-roboto;
-//     font-style: normal;
-//     font-size: 16px;
-//     font-weight: 700;
-//     line-height: 1.875;
-//     align-items: center;
-//     text-align: center;
-//     letter-spacing: 0.06em;
-//     cursor: pointer;
-//     color: $global-white-color;
-//     border: none;
-//     border-radius: 4px;
-//     /* css перехід */
-//     transition-property: background-color;
-//     transition-duration: $global-transition-duration;
-//     transition-timing-function: $global-transition-timing-function;
+    @media screen and (min-width: $tablet-breakpoint) {
+        & {
+            max-width: 768px;
+            background-image: linear-gradient(to right,
+                            rgba(47, 48, 58, 0.4),
+                            rgba(47, 48, 58, 0.4)),
+                              url(../images/hero_tablet.jpg);
+        }
+        @media screen and (min-resolution: 2dppx) {
+            & {
+                background-image: linear-gradient(to right,
+                                rgba(47, 48, 58, 0.4),
+                                rgba(47, 48, 58, 0.4)),
+                                url(../images/hero_tablet@2x.jpg);
+            }   
+        }  
+    }
 
-//     &:active {
-//         background-color: $hero-button-background-active-color;
-//     }
-// }
+    @media screen and (min-width: $desktop-breakpoint) {
+        & {
+            max-width: 1600px;
+            min-height: 600px;
+            padding-top: 200px;
+            padding-bottom: 200px;
+            background-image: linear-gradient(to right,
+                            rgba(47, 48, 58, 0.4),
+                            rgba(47, 48, 58, 0.4)),
+                              url(../images/hero_desktop.jpg);
+        }
+        @media screen and (min-resolution: 2dppx) {
+            & {
+                background-image: linear-gradient(to right,
+                                rgba(47, 48, 58, 0.4),
+                                rgba(47, 48, 58, 0.4)),
+                                url(../images/hero_desktop@2x.jpg);
+            }   
+        }  
+    }
+}
+
+.hero-section__title {
+    display: block;
+    width: 360px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
+    font-weight: 900;
+    font-size: 26px;
+    line-height: calc(42 / 26);
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: $global-white-color;
+
+    @media screen and (min-width: $desktop-breakpoint) {
+        width: 696px;
+        font-size: 44px;
+        line-height: calc(60 / 44);
+    }
+}
+
+.hero-section__button {
+    width: 200px;
+    height: 60px;
+    background: $global-sky-color;
+    font-family: $body-font-family-roboto;
+    font-style: normal;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: calc(30 / 16);
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    cursor: pointer;
+    color: $global-white-color;
+    border: none;
+    border-radius: 4px;
+    /* css перехід */
+    transition-property: background-color;
+    transition-duration: $global-transition-duration;
+    transition-timing-function: $global-transition-timing-function;
+
+    &:active {
+        background-color: $hero-button-background-active-color;
+    }
+}
